--- a/src/NubankClient/NubankClient.csproj
+++ b/src/NubankClient/NubankClient.csproj
@@ -11,9 +11,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Http" Version="3.0.0" />
     <PackageReference Include="QRCoder" Version="1.3.5" />
     <PackageReference Include="RestSharp" Version="106.6.7" />
     <PackageReference Include="RestSharp.Newtonsoft.Json" Version="1.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Responses\" />
   </ItemGroup>
   
 </Project>
